Fixed bugs: 1. list of holidays updating for selected month; 2. a bug with selecting a proper radio-button on the noteList's attached flyout; 3. non-recurring holidays in holidaysList for a selected day (when "SelectedHolidayType" is "All"); 4. InitializeDecades for WP 5. DatePicker for WP 6. month/date changing (arrow-buttons) for both apps
Other:
1. the new field (Year) in HolidayItem class;
2. added the shared controller for arrow-buttons on monthTopString (both left and right);
3. the new class implementing IComparer interface;
4. Changed size of arrow-buttons for WP

--- a/Calendar/Calendar.Shared/Themes/CalendarDictionary.xaml
+++ b/Calendar/Calendar.Shared/Themes/CalendarDictionary.xaml
@@ -82,6 +82,16 @@
         <Setter Property="Width" Value="400"/>
         <Setter Property="FontFamily" Value="Minion Pro"/>
         <Setter Property="FontSize" Value="18"/>
+        <Setter Property="RequestedTheme" Value="Light"/>
+    </Style>
+    <Style x:Name="CbHolidayStyleWP" x:Key="CbHolidayStyleWP" TargetType="CheckBox">
+        <Setter Property="Height" Value="auto"/>
+        <Setter Property="Width" Value="auto"/>
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="FontFamily" Value="Minion Pro"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="RequestedTheme" Value="Light"/>
     </Style>
     <!--/CALENDAR BOTTOM MENU-->
 
@@ -105,10 +115,10 @@
     </Style>
     <Style TargetType="FlyoutPresenter" x:Key="WPNoteFlyoutStyle">
         <Setter Property="Background" Value="#FFF6F6F9"/>
-        <Setter Property="BorderThickness" Value="5"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="#ff303030"/>
         <Setter Property="Width" Value="auto"/>
-        <Setter Property="Height" Value="330"/>
+        <Setter Property="Height" Value="auto"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
     </Style>
