New Images & colors 1. icons for both apps 2. images of color themes for WP 3. main theme (red) and color 4. gif-image for LoadingPage 5. changes in resource files (strings in Resources.resw and Themes.XML)

--- a/Calendar/Calendar.Windows/StartPage.xaml
+++ b/Calendar/Calendar.Windows/StartPage.xaml
@@ -12,10 +12,10 @@
     Loaded="pageRoot_Loaded"
     NavigationCacheMode="Disabled"
     >
-    <Grid Background="#FF944377">
-        <Image gif:AnimationBehavior.SourceUri="Assets/loading-page.gif"
+    <Grid Background="#FFce3636">
+        <Image gif:AnimationBehavior.SourceUri="Assets/301.gif"
                  HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Width="200" Height="288"/>
+                Width="100" Height="100"/>
 
     </Grid>
 </Page>
