--- a/Calendar/Calendar.WindowsPhone/SettingsPage.xaml
+++ b/Calendar/Calendar.WindowsPhone/SettingsPage.xaml
@@ -20,7 +20,7 @@
             <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
             <Setter Property="FontWeight" Value="SemiBold" />
             <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
-            <Setter Property="MinWidth" Value="154" />
+            <Setter Property="MinWidth" Value="160" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ToggleSwitch">
@@ -392,6 +392,7 @@
                            Height="auto" MinWidth="175"
                            TextAlignment="Left"
                            FontSize="18"
+                           Margin="5"
                            IsReadOnly="True"
                            ManipulationMode="None"
                            SelectionHighlightColor="#FF828282"                          
@@ -405,7 +406,8 @@
                               Toggled="tileToggle_Toggled" 
                               FontSize="12" 
                               Height="auto"
-                              Width="auto" Margin="5,-5,0,0"
+                              Width="170"
+                              Margin="5,-5,0,0"
                               BorderBrush="#ff303030"
                               Background="Transparent" 
                               VerticalAlignment="Center"
