--- a/Calendar/Calendar.Shared/Themes/CalendarDictionary.xaml
+++ b/Calendar/Calendar.Shared/Themes/CalendarDictionary.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Calendar">
-    
+    <local:ResizeFlipView x:Key="SizeResource"/>
     <x:String x:Key="AppName">Calendar</x:String>
     <!--CALENDAR-->
     <Style x:Key="CommonCalendarItemStyle" TargetType="GridViewItem">
@@ -111,9 +111,8 @@
         <Setter Property="Background" Value="#FFF6F6F9"/>
         <Setter Property="BorderThickness" Value="5"/>
         <Setter Property="BorderBrush" Value="#FF303030"/>
-        <Setter Property="MinWidth" Value="500"/>
-        <Setter Property="MinHeight" Value="600"/>
-        <Setter Property="MaxHeight" Value="600"/>
+        <Setter Property="MinWidth" Value="600"/>
+        <Setter Property="MinHeight" Value="500"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
     </Style>
     <!--/ADD-CHANGE-DELETE HOLIDAY-->
@@ -141,7 +140,24 @@
         <Setter Property="BorderThickness" Value="5"/>
         <Setter Property="BorderBrush" Value="#FF303030"/>
     </Style>
-    
+
+    <Style TargetType="FlyoutPresenter" x:Key="messageBtnFlyout">
+        <Setter Property="MinWidth" Value="{Binding Source={StaticResource SizeResource}, Path=MinWidth}"/>
+        <Setter Property="MinHeight" Value="{Binding Source={StaticResource SizeResource}, Path=MinHeight}"/>
+        <Setter Property="Width" Value="{Binding Source={StaticResource SizeResource}, Path=MinWidth}"/>
+        <Setter Property="Height" Value="{Binding Source={StaticResource SizeResource}, Path=MinHeight}"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Padding" Value="20"/>
+    </Style>
+    <Style TargetType="ListView" x:Key="messageBtnLV">
+        <Setter Property="Width" Value="{Binding Source={StaticResource SizeResource}, Path=StackPanelWidth}"/>
+        <Setter Property="Background" Value="#FFF0F0F2"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+    </Style>
+
     <Style TargetType="Button" x:Key="MainButton">
         <Setter Property="Background" Value="#FF454545"/>
         <Setter Property="Foreground" Value="#FFF6F6F9"/>
